--- a/Web/CreateAppoint.html
+++ b/Web/CreateAppoint.html
@@ -7,55 +7,98 @@
     <title>Appointment Form</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
 
 <body>
-    <h1 class="text-center">Appointment Creation</h1>
-    <h2 class="text-center mt-5" id="donorId">Donor Id: </h2>
-    <form class="form" id="submitForm" method="post">
-        <div class="d-flex justify-content-center align-items-center">
-            <div>
-                <input class="form-control" type="date" placeholder="appointmentDate" name="appointmentDate" /><br />
-                <input class="form-control" type="time" placeholder="appointmentTime" name="appointmentTime" /><br />
-
-                <button class="rounded" type="clear">Clear</button>
-                <button class="btn-denger rounded" type="submit">Submit</button>
+    <div class="donorid container">
+        <h1 class="text-center">Appointment Creation</h1>
+        <h2 class="text-center mt-5" id="donorId">Donor Id: </h2>
+        <form class="form" id="submitForm" method="post">
+            <div class="d-flex justify-content-center align-items-center">
+                <div>
+                    <input class="form-control mb-3" type="date" placeholder="Appointment Date" name="appointmentDate" required />
+                    <input class="form-control mb-3" type="time" placeholder="Appointment Time" name="appointmentTime" required />
+                    <div class="d-flex justify-content-between">
+                        <button class="btn btn-secondary rounded me-2" type="reset">Clear</button>
+                        <button class="btn btn-primary rounded" type="submit">Submit</button>
+                    </div>
+                </div>
             </div>
-        </div>
-    </form>
+        </form>
+        <h2 id="response" class="text-center mt-3"></h2>
+    </div>
 
-    <h2 id="response" class="text-center"></h2>
-</body>
-<style>
-    input {
-        font-size: 1.5rem;
-    }
-</style>
+    <script>
+        const UrlData = new URLSearchParams(window.location.search);
+        const donorId = UrlData.get('donorId');
+        document.getElementById("donorId").append(donorId);
 
-<script>
-    const UrlData = new URLSearchParams(window.location.search);
-    const donorId = (UrlData.get('donorId'));
-    document.getElementById("donorId").append(donorId);
+        document.getElementById("submitForm").addEventListener("submit", function (event) {
+            event.preventDefault();
+            var form = event.target;
+            var formData = new FormData(form);
 
-    document.getElementById("submitForm").addEventListener("submit", function (event) {
-        event.preventDefault();
-        var form = event.target;
-        var formData = new FormData(form);
-
-        fetch(`http://localhost:8080/api/v1/appointment/createAppointment?donorId=${donorId}`, {
-            method: 'POST',
-            body: formData
-        })
-            .then(response => response.text())
-            .then(data => {
-                document.getElementById("response").innerText = JSON.parse(data).message;
+            fetch(`http://localhost:8080/api/v1/appointment/createAppointment?donorId=${donorId}`, {
+                method: 'POST',
+                body: formData
             })
-            .catch(error => {
-                console.error('Error:', error);
-                document.getElementById("response").innerText = error;
-            });
-    });
+                .then(response => response.json())
+                .then(data => {
+                    document.getElementById("response").innerText = data.message;
+                })
+                .catch(error => {
+                    console.error('Error:', error);
+                    document.getElementById("response").innerText = "An error occurred. Please try again.";
+                });
+        });
+    </script>
 
-</script>
+    <style>
+        body {
+            margin: 0;
+            font-family: 'Roboto', sans-serif;
+            background-image: url('https://media0.giphy.com/media/xT9IgkwR8wkzvDh68M/200.gif?cid=6c09b952etxbl5ecq3tnino2yzkfbdbtm4ff3c73uqce8xeh&ep=v1_internal_gif_by_id&rid=200.gif&ct=g');
+            background-size: cover;
+            color: #333;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            padding: 0;
+            backdrop-filter: blur(15px);
+        }
+
+        .donorid {
+            background-color: #ffffff22;
+            color: #ffffff;
+            padding: 30px;
+            border-radius: 15px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            max-width: 400px;
+            width: 100%;
+        }
+
+        h1, h2 {
+            color: #ffffff;
+            font-family: 'Playfair Display', serif;
+            font-weight: 900;
+        }
+
+        .form-control {
+            font-size: 1.2rem;
+        }
+
+        button {
+            font-size: 1rem;
+        }
+
+        .btn-denger {
+            background-color: #dc3545;
+            color: white;
+        }
+    </style>
+</body>
 
 </html>
