--- a/Web/CreateDonation.html
+++ b/Web/CreateDonation.html
@@ -8,30 +8,121 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background: linear-gradient(to bottom right, #e53935, #e35d5b);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+
+        .container {
+            max-width: 600px;
+            padding: 20px;
+            background: linear-gradient(to bottom right, #ddd6f3, #faaca8); 
+            border-radius: 45px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border: 4px solid rgba(255, 0, 0, 0.703);
+        }
+
+        h1 {
+            font-size: 36px;
+            color: #333;
+            text-align: center;
+            margin-bottom: 30px;
+            font-family: "Roboto";
+            font-weight: 900;
+            font-size: 45px;
+        }
+
+        h2 {
+            font-size: 24px;
+            color: #333;
+            text-align: center;
+            
+            font-family: "Roboto";
+            font-weight: 900;
+        }
+
+        form {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        label {
+            font-size: 18px;
+            color: #555;
+            margin-bottom: 5px;
+        }
+
+        select,
+        input {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 20px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            font-size: 16px;
+            box-sizing: border-box;
+        }
+
+        button {
+            width: 100%;
+            padding: 10px;
+            border: none;
+            border-radius: 5px;
+            font-size: 18px;
+            cursor: pointer;
+            transition: background-color 0.3s; 
+        }
+
+        .btn-clear {
+            background-color: #ddd;
+            color: #333;
+            margin-top: 10px;
+        }
+
+        .btn-submit {
+            background-color: #007bff;
+            color: #fff;
+        }
+
+        
+        .btn-clear:hover,
+        .btn-submit:hover {
+            background-color: #0056b3;
+        }
+
+        #response {
+            font-size: 18px;
+            color: #007bff;
+        }
+    </style>
 </head>
 
 <body>
-    <h1 class="text-center">Donation Form</h1>
-    <h2 class="text-center m-5" id="appointId">Appointment Id: </h2>
-    <form class="form" id="donationForm" method="post">
-        <div class="d-flex justify-content-center align-items-center">
-            <div>
-                <label for="donationStatus">Donation Status:</label>
-                <select id="donationStatus" name="donationStatus" required><br>
-                    <option value="COMPLETED">COMPLETED</option>
-                    <option value="CANCELED">CANCELED</option>
-                    <option value="PENDING">PENDING</option>
-                </select><br>
-                <input class="form-control" type="number" id="quantity" name="quantity" placeholder="Quantity"
-                    required><br>
+    <div class="container">
+        <h1>Donation Form</h1>
+        <h2 id="appointId">Appointment Id: </h2>
+        <form id="donationForm" method="post">
+            <label for="donationStatus">Donation Status:</label>
+            <select id="donationStatus" name="donationStatus" required>
+                <option value="COMPLETED">COMPLETED</option>
+                <option value="CANCELED">CANCELED</option>
+                <option value="PENDING">PENDING</option>
+            </select>
+            <input type="number" id="quantity" name="quantity" placeholder="Quantity" required>
 
-                <button class="rounded" type="clear">Clear</button>
-                <button class="btn-denger rounded" type="submit">Submit</button>
-            </div>
-        </div>
-    </form>
+            <button class="btn-submit rounded" type="submit">Submit</button>
+            <button class="btn-clear rounded" type="reset">Clear</button>
+        </form>
 
-    <div class="text-center" id="response"></div>
+        <div class="text-center" id="response"></div>
+    </div>
 
     <script>
         var appoint = new URLSearchParams(window.location.search);
